// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros client-side: client-side 1`] = `

import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("index.test.ts")

      ↓ ↓ ↓ ↓ ↓ ↓

import { useSSRComputationServer } from "../lib/useSSRComputation";
const x = useSSRComputationServer("index.test.ts");


`;

exports[`macros multiple-imports: multiple-imports 1`] = `

import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("index.test.ts")
const y = useSSRComputation("yarn.lock")

      ↓ ↓ ↓ ↓ ↓ ↓

import { useSSRComputationClient } from "../lib/useSSRComputation";
import { useSSRComputationClient } from "../lib/useSSRComputation";
const x = useSSRComputationClient("index.test.ts");
const y = useSSRComputationClient("yarn.lock");


`;

exports[`macros no usage: no usage 1`] = `

import { useSSRComputation } from "../lib/index.macro"

      ↓ ↓ ↓ ↓ ↓ ↓



`;

exports[`macros server-side: server-side 1`] = `

import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("index.test.ts")

      ↓ ↓ ↓ ↓ ↓ ↓

import { useSSRComputationClient } from "../lib/useSSRComputation";
const x = useSSRComputationClient("index.test.ts");


`;
